Remove the old TallyHbiDbSeeder implementation
Removed the original implementation and updated the affected
component tests.